--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-tag-input",
   "description": "A tag input component for react-native",
-  "version": "0.0.21",
-  "author": "Jack Wohlfert (https://github.com/jwohlfert23), Marlon S.",
+  "version": "0.0.22",
+  "author": "Jack Wohlfert (https://github.com/jwohlfert23), Marlon Santos (https://github.com/matr1xp)",
   "keywords": [
     "email input",
     "emails",
